# sdl2-doom

./: .gitignore  CMakeLists.txt  README.md  build_nix.sh  build_windows.sh  makefile  mingw-sdl-setup.sh
.github/workflows/: nix.yml  osx.yml  windows-build.yml
cmake/sdl2/: FindSDL2_mixer.cmake
docs/: todo.txt  valgrind_log.txt
include/: config.h  doomfeatures.h  doomgeneric.h  i_video.h  mmus2mid.h
scripts/: makefile.bak  valgrind.sh
src/: am_map.c  build_macos.sh  config.h  d_items.c  d_main.c  d_net.c  doomdef.c  doomdef.h  doomgeneric  doomgeneric.c  doomgeneric.h  doomgeneric_sdl.c  doomstat.c  doomtype.h  dstrings.c  dummy.c  f_finale.c  f_wipe.c  g_game.c  hu_lib.c  hu_stuff.c  i_input.c  i_joystick.c  i_main.c  i_net.c  i_sdl.c  i_sdlmusic.c  i_sound.c  i_swap.h  i_system.c  i_timer.c  i_video.c  i_video.h  info.c  m_argv.c  m_bbox.c  m_bbox.h  m_cheat.c  m_fixed.c  m_menu.c  (+50 more)
